--- a/index.html
+++ b/index.html
@@ -2,53 +2,112 @@
 <html>
 
 <head>
-	<link rel="stylesheet"
-		href=
-"https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-	<script type="text/javascript"
-src="https://code.jquery.com/jquery-2.1.1.min.js">
-	</script>
-	<script src=
-"https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js">
-	</script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<style>
+		* {
+			box-sizing: border-box;
+		}
 
-	<script>
-		function Toast1(string, timeLength) {
-			Materialize.toast(
-				'<em>' + string + '</em>', timeLength
-			);
+		body {
+			margin: 0;
+			font-family: Arial, Helvetica, sans-serif;
 		}
-		function Toast2(string, timeLength) {
-			Materialize.toast(
-				'<b>' + string + '</b>', timeLength, 'rounded'
-			);
+
+		.topnav {
+			overflow: hidden;
+			background-color: #e9e9e9;
 		}
-		function Toast3(string, timeLength) {
-			Materialize.toast(
-				'<u>' + string + '<u>', timeLength
-			);
+
+		.topnav a {
+			float: left;
+			display: block;
+			color: black;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+			font-size: 17px;
 		}
-	</script>
+
+		.topnav a:hover {
+			background-color: #ddd;
+			color: black;
+		}
+
+		.topnav a.active {
+			background-color: #2196F3;
+			color: white;
+		}
+
+		.topnav .search-container {
+			float: right;
+		}
+
+		.topnav input[type=text] {
+			padding: 6px;
+			margin-top: 8px;
+			font-size: 17px;
+			border: none;
+		}
+
+		.topnav .search-container button {
+			float: right;
+			padding: 6px 10px;
+			margin-top: 8px;
+			margin-right: 16px;
+			background: #ddd;
+			font-size: 17px;
+			border: none;
+			cursor: pointer;
+		}
+
+		.topnav .search-container button:hover {
+			background: #ccc;
+		}
+
+		@media screen and (max-width: 600px) {
+			.topnav .search-container {
+				float: none;
+			}
+
+			.topnav a,
+			.topnav input[type=text],
+			.topnav .search-container button {
+				float: none;
+				display: block;
+				text-align: left;
+				width: 100%;
+				margin: 0;
+				padding: 14px;
+			}
+
+			.topnav input[type=text] {
+				border: 1px solid #ccc;
+			}
+		}
+	</style>
 </head>
 
 <body>
-	<body class="container">
-		<h4>Toasts</h4>
-		<a class="btn" onclick=
-			"Toast1('Emphasized Alert!', 1500)">
-			Emphasized Alert!!
-		</a><br><br>
 
-		<a class="btn" onclick=
-			"Toast2('Bold N rounded Alert!', 1500)">
-			Bold N rounded Alert!!
-		</a><br><br>
+	<div class="topnav">
+		<a class="active" href="#home"> #MWAMUZISCODEV </a>
+		<a href="#about">About</a>
+		<a href="#contact">Contact</a>
+		<div class="search-container">
+			<form action="/action_page.php">
+				<input type="text" placeholder="Search.." name="search">
+				<button type="submit"><i class="fa fa-search"></i></button>
+			</form>
+		</div>
+		<a href="#contact">Contact</a>
+	</div>
 
-		<a class="btn" onclick=
-			"Toast3('Underlined Alert!', 1500)">
-			Underlined Alert!!
-		</a><br><br>
-	</body>
+	<div style="padding-left:16px">
+		<h2>Responsive Search Bar</h2>
+		<p>Navigation bar with a search box and a submit button inside of it.</p>
+		<p>Resize the browser window to see the responsive effect.</p>
+	</div>
+
 </body>
 
 </html>
